2006-11-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs: Fix bug
	  that makes the code completion window appear randomly when an
	  assembly is reparsed.

2006-09-21 Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: Added some null checks.

2006-09-19 Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* .: Added svn:ignore for MonoDevelop.Projects.Gui.pidb

2006-09-01 Lluis Sanchez Gual  <lluis@novell.com>

 	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs: changed
 	  the icon shown in the tooltip when the parser db is being generated.
	* MonoDevelop.Projects.Gui.mdp: Updated.

2006-08-10 Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.Completion/CodeCompletionDataProvider.cs:
	* MonoDevelop.Projects.Gui.Completion/CodeCompletionData.cs:
	  Provide the ambience to use for code completion as a parameter.

2006-08-07 Philip Turnbull <philip.turnbull@gmail.com>

	* MonoDevelop.Projects.Gui/IconService.cs:
	Added GetIcon method for indexers.

	* MonoDevelop.Projects.Gui.Completion/CodeCompletionData.cs:
	Track API changes in Ambience.

2006-08-08 Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.Dialogs.OptionPanels/DeploymentOptionsPanel.cs:
	* Base.glade: Allow setting the default deploy target in
	  the deployment options panel.

2006-08-04 Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs:
	  Properly handle the case when the completion list is empty
	  (this may happen if the parser database is being generated).

2006-07-29 Matej Urbas <matej.urbas@gmail.com>

	* MonoDevelop.Projects.Gui.Completion/CodeCompletionData.cs: Base types of
	  classes were not displayed. Fixed that.

2006-07-28 Matej Urbas <matej.urbas@gmail.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: Fixed the completion